err/django-croppy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appconf'...
Listing './lib/python3.5/site-packages/croppy'...
Listing './lib/python3.5/site-packages/django_appconf-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/django_croppy-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/django_imagekit-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/django_jsonfield-0.8.12.egg-info'...
Listing './lib/python3.5/site-packages/imagekit'...
Listing './lib/python3.5/site-packages/imagekit/imagecache'...
Compiling './lib/python3.5/site-packages/imagekit/imagecache/__init__.py'...
***   File "./lib/python3.5/site-packages/imagekit/imagecache/__init__.py", line 27
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/imagekit/management'...
Listing './lib/python3.5/site-packages/imagekit/management/commands'...
Listing './lib/python3.5/site-packages/imagekit/models'...
Listing './lib/python3.5/site-packages/imagekit/models/fields'...
Listing './lib/python3.5/site-packages/imagekit/processors'...
Listing './lib/python3.5/site-packages/imagekit/templates'...
Listing './lib/python3.5/site-packages/imagekit/templates/imagekit'...
Listing './lib/python3.5/site-packages/imagekit/templates/imagekit/admin'...
Compiling './lib/python3.5/site-packages/imagekit/utils.py'...
***   File "./lib/python3.5/site-packages/imagekit/utils.py", line 182
    print 'Invalidating cache for "%s.%s"' % (model._meta.app_label, model.__name__)
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonfield'...
Compiling './lib/python3.5/site-packages/jsonfield/forms.py'...
***   File "./lib/python3.5/site-packages/jsonfield/forms.py", line 24
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonfield/templatetags'...
Listing './lib/python3.5/site-packages/jsonfield/tests'...
Listing './lib/python3.5/site-packages/jsonfield/tests/jsonfield_test_app'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/core'...
Listing './share'...
Listing './share/python-wheels'...
